@@ -1,0 +1,26 @@
+<?php
+namespace dhope0000\LXDClient\Model\Hosts;
+
+use dhope0000\LXDClient\Model\Database\Database;
+
+class DeleteHost
+{
+    public function __construct(Database $database)
+    {
+        $this->database = $database->dbObject;
+    }
+
+    public function delete(int $hostId)
+    {
+        $sql = "DELETE FROM
+                    `Hosts`
+                WHERE
+                    `Host_ID` = :hostId
+                ";
+        $do = $this->database->prepare($sql);
+        $do->execute([
+            ":hostId"=>$hostId
+        ]);
+        return $do->rowCount() ? true : false;
+    }
+}
